Is Good Create Category

--- a/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
+++ b/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebSmonder
 @using WebSmonder.Models
+@using WebSmonder.Models.Category
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
