--- a/WebSmonder/WebSmonder/Views/Categories/Index.cshtml
+++ b/WebSmonder/WebSmonder/Views/Categories/Index.cshtml
@@ -2,6 +2,7 @@
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">Категорії мультфільмів</h2>
+    <a href="@Url.Action("Create")" class="btn btn-success">Додати</a>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         @foreach (var item in Model)
         {
