Upload image server

--- a/WebSmonder/WebSmonder/Views/Categories/Index.cshtml
+++ b/WebSmonder/WebSmonder/Views/Categories/Index.cshtml
@@ -8,7 +8,7 @@
         {
             <div class="col">
                 <div class="card h-100 shadow-sm">
-                    <img src="@item.Image" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;">
+                    <img src="/images/400_@item.Image" class="card-img-top" alt="@item.Name" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <p class="card-text">@item.Description</p>
