--- a/WebSmonder/WebSmonder/Views/Categories/Create.cshtml
+++ b/WebSmonder/WebSmonder/Views/Categories/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CategoryCreateViewModel
 
 <div class="container">
-    <form asp-action="Create" class="p-4 shadow rounded bg-light" style="max-width: 600px; margin: auto;">
+    <form asp-action="Create" enctype="multipart/form-data" class="p-4 shadow rounded bg-light" style="max-width: 600px; margin: auto;">
         <h4 class="mb-4">Створення категорії</h4>
 
         <!-- Назва категорії -->
@@ -19,8 +19,8 @@
 
         <!-- Зображення (URL) -->
         <div class="mb-3">
-            <label asp-for="ImageUrl" class="form-label">URL зображення</label>
-            <input asp-for="ImageUrl" class="form-control" placeholder="https://example.com/image.jpg">
+            <label asp-for="ImageFile" class="form-label"></label>
+            <input asp-for="ImageFile" type="file" class="form-control" accept="image/*">
         </div>
 
         <!-- Кнопка -->
