--- a/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
+++ b/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
@@ -1,12 +1,70 @@
 ﻿<!DOCTYPE html>
 <html lang="uk">
 <head>
-	<meta charset="UTF-8">
-	<title>Пасхальні св'ята @ViewData["Title"]</title>
-	<link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Пасхальні св'ята @ViewData["Title"]</title>
+    <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        body {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+        }
+    </style>
 </head>
 <body>
+    <header data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container">
+                <a class="navbar-brand" asp-action="Index" asp-controller="Categories">Смаколики</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    @if(User.Identity.IsAuthenticated)
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="Profile" asp-controller="Account">@User.Identity.Name</a>
+                            </li>
+                            <li class="nav-item">
+                                @using(Html.BeginForm("Logout", "Account", FormMethod.Post))
+                                {
+                                    <button class="nav-link">Вихід</button>
+                                }
+                                
+                            </li>
+                        </ul>
+                    }
+                    else
+                    {
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="Login" asp-controller="Account">Вхід</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Реєстрація</a>
+                            </li>
+                        </ul>
+                    }
+                    
+                </div>
+            </div>
+        </nav>
+    </header>
+
+
 	<div class="container">
 		<main role="main" class="pb-3">
 			@RenderBody()
