--- a/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
+++ b/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebSmonder
 @using WebSmonder.Models
 @using WebSmonder.Models.Category
+@using WebSmonder.Models.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
