--- a/WebSmonder/WebSmonder/Views/Shared/_Layout.cshtml
+++ b/WebSmonder/WebSmonder/Views/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebSmonder</title>
     <script type="importmap"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WebSmonder.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/admin/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/admin/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/admin/WebSmonder.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -42,9 +42,9 @@
             &copy; 2025 - WebSmonder - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/admin/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/admin/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/admin/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
