--- a/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
+++ b/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
@@ -73,7 +73,7 @@
 		</main>
 	</div>
 
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<script src="~/admin/lib/jquery/dist/jquery.min.js"></script>
 	<script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	@await RenderSectionAsync("Scripts", required: false)
