--- a/WebSmonder/WebSmonder/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
+++ b/WebSmonder/WebSmonder/Areas/Admin/Views/Shared/Sections/Menu/_VerticalMenu.cshtml
@@ -25,6 +25,23 @@
 	<ul class="menu-inner py-1">
 
 
+		<!-- Users -->
+		<li class='menu-item@(currentPage.EndsWith("/admin") || currentPage.StartsWith("/Users") ? " active open" : "")'>
+			<a href="javascript:void(0);" class="menu-link menu-toggle">
+				<i class="menu-icon tf-icons ri-layout-left-line"></i>
+				<div>Account Settings</div>
+			</a>
+			<ul class="menu-sub">
+				<li class='menu-item@(currentPage == "/admin" ? " active" : "")'>
+					<a asp-controller="Users" asp-action="Index" class="menu-link">
+						<div>Користувачі</div>
+					</a>
+				</li>
+				
+			</ul>
+		</li>
+
+
 
 		<!-- Layouts -->
 		<li class='menu-item@(currentPage.StartsWith("/admin/LayoutExamples") ? " active open" : "")'>
@@ -88,6 +105,12 @@
 				</li>
 			</ul>
 		</li>
+		
+
+
+
+
+
 		<li class='menu-item@(currentPage.StartsWith("/admin/Auth") ? " active open" : "")'>
 			<a href="javascript:void(0);" class="menu-link menu-toggle">
 				<i class="menu-icon tf-icons ri-shield-keyhole-line"></i>
