--- a/WebSmonder/WebSmonder/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WebSmonder/WebSmonder/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebSmonder.Areas.Admin
 @using WebSmonder.Areas.Admin.Models
+@using WebSmonder.Areas.Admin.Models.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
