--- a/WebSmonder/WebSmonder/Views/Account/Login.cshtml
+++ b/WebSmonder/WebSmonder/Views/Account/Login.cshtml
@@ -15,14 +15,20 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="mb-3">
+            <div class="mb-0">
                 <label asp-for="Password" class="form-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+
+            <div class="mb-2 text-end">
+                <a asp-action="ForgotPassword" 
+                    class="btn btn-link">Відновити пароль</a>
+            </div>
+
             <div class="mb-3">
                 <input type="submit" value="Вхід" class="btn btn-primary" />
-                <a href="#" class="btn btn-light">Реєструватися</a>
+                <a asp-action="Register" class="btn btn-light">Реєструватися</a>
             </div>
         </form>
     </div>
