--- a/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
+++ b/WebSmonder/WebSmonder/Views/Shared/_MyLayout.cshtml
@@ -26,7 +26,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" 
+                                aria-current="page"
+                                asp-action="Index" asp-controller="Products">Продукти</a>
                         </li>
                         
                         @if(User.IsInRole(Roles.Admin))
