--- a/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
+++ b/WebSmonder/WebSmonder/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using WebSmonder
 @using WebSmonder.Models
 @using WebSmonder.Models.Category
+@using WebSmonder.Models.Product
 @using WebSmonder.Models.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
